efk-uat/elf-log-pilot/kibana/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: xh-test
spec:
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      name: kibana
      labels:
        app: kibana
    spec:
      containers:
        - name: kb
          image: harbor.5aixi.com/xh-test/kibana:7.2.0
          ports:
            - name: http
              containerPort: 5601
      imagePullSecrets:
        - name: xh-harbor-secret
