efk-uat/elf-log-pilot/kibana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: xh-test
spec:
  rules:
    - host: xh-test-kibana.i5xh.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana-service
              servicePort: 5601
